--- a/CSS Art-2/index.html
+++ b/CSS Art-2/index.html
@@ -17,6 +17,12 @@
                 <p class="network">JIO 4G</p>
                 <p class="time">1:17</p>
                 <p class="battary"></p>
+                <div class="icons">
+                    <div class="icon"><img src="/CSS Art-2/images/phone.png" alt=""></div>
+                    <div class="icon"><img src="/CSS Art-2/images/message.png" alt=""></div>
+                    <div class="icon"><img src="/CSS Art-2/images/music.png" alt=""></div>
+                    <div class="icon"><img src="/CSS Art-2/images/safari.png" alt=""></div>
+                </div>
             </div>
             <div class="botton">
 
